--- a/mongodb/replset/docker-compose.yml
+++ b/mongodb/replset/docker-compose.yml
@@ -1,45 +1,47 @@
-mongo3:
-  container_name: mongo3
-  image: mongo:3.2
-  expose:
-    - "27017"
-  ports:
-    - 27018:27017
-    - 28018:28017
-  restart: always
-  command: /usr/bin/mongod --replSet rs --smallfiles --oplogSize 128 --rest
+version: '2'
+services:
+  mongo3:
+    container_name: mongo3
+    image: mongo:3.2
+    expose:
+      - "27017"
+    ports:
+      - 27018:27017
+      - 28018:28017
+    restart: always
+    command: /usr/bin/mongod --replSet rs --smallfiles --oplogSize 128 --rest
 
-mongo2:
-  container_name: mongo2
-  image: mongo:3.2
-  expose:
-    - "27017"
-  ports:
-    - 27019:27017
-    - 28019:28017
-  restart: always
-  command: /usr/bin/mongod --replSet rs --smallfiles --oplogSize 128 --rest
+  mongo2:
+    container_name: mongo2
+    image: mongo:3.2
+    expose:
+      - "27017"
+    ports:
+      - 27019:27017
+      - 28019:28017
+    restart: always
+    command: /usr/bin/mongod --replSet rs --smallfiles --oplogSize 128 --rest
 
-mongo1:
-  container_name: mongo1
-  image: mongo:3.2
-  expose:
-    - "27017"
-  ports:
-    - 27017:27017
-    - 28017:28017
-  links:
-  command: /usr/bin/mongod --replSet rs --smallfiles --oplogSize 128 --rest
-    - mongo2:mongo2
-    - mongo3:mongo3
-  restart: always
+  mongo1:
+    container_name: mongo1
+    image: mongo:3.2
+    expose:
+      - "27017"
+    ports:
+      - 27017:27017
+      - 28017:28017
+    links:
+    command: /usr/bin/mongod --replSet rs --smallfiles --oplogSize 128 --rest
+      - mongo2:mongo2
+      - mongo3:mongo3
+    restart: always
 
-mongosetup:
-  image: mongo:3.2
-  links:
-    - mongo1:mongo1
-    - mongo2:mongo2
-    - mongo3:mongo3
-  volumes:
-    - ./scripts:/scripts
-  entrypoint: [ "/scripts/setup-replset.sh" ]
+  mongosetup:
+    image: mongo:3.2
+    links:
+      - mongo1:mongo1
+      - mongo2:mongo2
+      - mongo3:mongo3
+    volumes:
+      - ./scripts:/scripts
+    entrypoint: [ "/scripts/setup-replset.sh" ]
