--- a/mongodb/replset/docker-compose.yml
+++ b/mongodb/replset/docker-compose.yml
@@ -3,6 +3,10 @@ services:
   mongo3:
     container_name: mongo3
     image: mongo:3.2
+    log_driver: syslog
+    log_opt:
+      syslog-facility: local6
+      tag: rocketchat
     expose:
       - "27017"
     ports:
@@ -14,6 +18,10 @@ services:
   mongo2:
     container_name: mongo2
     image: mongo:3.2
+    log_driver: syslog
+    log_opt:
+      syslog-facility: local6
+      tag: rocketchat
     expose:
       - "27017"
     ports:
@@ -25,6 +33,10 @@ services:
   mongo1:
     container_name: mongo1
     image: mongo:3.2
+    log_driver: syslog
+    log_opt:
+      syslog-facility: local6
+      tag: rocketchat
     expose:
       - "27017"
     ports:
@@ -38,6 +50,10 @@ services:
 
   mongosetup:
     image: mongo:3.2
+    log_driver: syslog
+    log_opt:
+      syslog-facility: local6
+      tag: rocketchat
     links:
       - mongo1:mongo1
       - mongo2:mongo2
