--- a/mongodb/replset/docker-compose.yml
+++ b/mongodb/replset/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mongo:3.2
     logging:
       driver: syslog
-      log_opt:
+      options:
         syslog-facility: local6
         tag: rocketchat
     expose:
@@ -21,7 +21,7 @@ services:
     image: mongo:3.2
     logging:
       driver: syslog
-      log_opt:
+      options:
         syslog-facility: local6
         tag: rocketchat
     expose:
@@ -37,7 +37,7 @@ services:
     image: mongo:3.2
     logging:
       driver: syslog
-      log_opt:
+      options:
         syslog-facility: local6
         tag: rocketchat
     expose:
@@ -55,7 +55,7 @@ services:
     image: mongo:3.2
     logging:
       driver: syslog
-      log_opt:
+      options:
         syslog-facility: local6
         tag: rocketchat
     links:
