--- a/mongodb/replset/docker-compose.yml
+++ b/mongodb/replset/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2"
 services:
   mongo3:
     container_name: mongo3
@@ -7,7 +7,7 @@ services:
       driver: syslog
       options:
         syslog-facility: local6
-        tag: rocketchat
+        tag: mongo3
     expose:
       - "27017"
     ports:
@@ -23,7 +23,7 @@ services:
       driver: syslog
       options:
         syslog-facility: local6
-        tag: rocketchat
+        tag: mongo2
     expose:
       - "27017"
     ports:
@@ -39,7 +39,7 @@ services:
       driver: syslog
       options:
         syslog-facility: local6
-        tag: rocketchat
+        tag: mongo1
     expose:
       - "27017"
     ports:
@@ -57,7 +57,7 @@ services:
       driver: syslog
       options:
         syslog-facility: local6
-        tag: rocketchat
+        tag: mongosetup
     links:
       - mongo1:mongo1
       - mongo2:mongo2
